--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div align="center">
 	<div class="jumbotron">
-		<h1>Welcome to the  Barbershop</h1>
+		<h1><%= t 'app.welcome_to_admin' %></h1>
 		<p>RubyOnRails v4.2.6</p>
+		<p><a class="btn btn-lg btn-success" href="#" role="button">Login</a></p>
 	</div>
 </div>
