--- a/app/views/barber_shops/new.html.erb
+++ b/app/views/barber_shops/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Barber Shop</h1>
+<h1><%= t 'barber_shops.new.title' %></h1>
+
+<%= link_to t('app.back'), barber_shops_path %>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', barber_shops_path %>
