--- a/app/views/barber_shops/_form.html.erb
+++ b/app/views/barber_shops/_form.html.erb
@@ -114,7 +114,7 @@
       <div class="col-sm-12">
         <div class="form-horizontal">
           <div class="actions">
-            <%= f.submit "Save", class: "btn btn-primary pull-right" %>
+            <%= f.submit t('app.save'), class: "btn btn-primary pull-right" %>
           </div>
         </div>
       </div>
