--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,14 +27,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Barbershops", root_path, class: "navbar-brand" %>
+        <%= link_to "Home", root_path, class: "navbar-brand" %>
 
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
           <li><%= link_to "Barbershops", barber_shops_path %></li>
         </ul>
       </div>
