Installation de gem 'jquery-datatables-rails', '~> 3.3.0' Seeder de Modulo de Barbershops

--- a/app/views/barber_shops/index.html.erb
+++ b/app/views/barber_shops/index.html.erb
@@ -3,10 +3,10 @@
 <h1><%= t 'barber_shops.index.title' %></h1>
 <%= link_to t('barber_shops.new.title'), new_barber_shop_path, class: "btn btn-primary btn-lg active pull-right", role: "button" %>
 
-<table class="table table-striped">
+<table id="barber_shops_lists" class="table table-striped" cellspacing="0" width="100%">
   <thead>
     <tr>
-      <th style="width: 150px;"><%= t 'app.actions' %></th>
+      <th><%= t 'app.actions' %></th>
       <th><%= t 'barber_shops.code' %></th>
       <th><%= t 'barber_shops.name' %></th>
       <th><%= t 'barber_shops.business_name' %></th>
@@ -15,10 +15,6 @@
       <th><%= t 'barber_shops.city' %></th>
       <th><%= t 'barber_shops.phone' %></th>
       <th><%= t 'barber_shops.owner' %></th>
-      <th><%= t 'barber_shops.contact_name' %></th>
-      <th><%= t 'barber_shops.contact_phone1' %></th>
-      <th><%= t 'barber_shops.contact_phone2' %></th>
-      <th><%= t 'barber_shops.email' %></th>
       <th><%= t 'barber_shops.enable' %></th>
     </tr>
   </thead>
@@ -26,7 +22,7 @@
   <tbody>
     <% @barber_shops.each do |barber_shop| %>
     <tr>
-      <td>
+      <td style="width: 150px; display: block">
         <%= link_to '', barber_shop, :class => 'btn btn-primary  btn-sm glyphicon glyphicon-eye-open' %></span>
         <%= link_to '', edit_barber_shop_path(barber_shop), :class => 'btn btn-info  btn-sm glyphicon glyphicon-pencil' %></span>
         <%= link_to ' ', barber_shop, method: :delete, data: { confirm: t('app.messages_confirmation_delete') }, :class => 'small btn  btn-danger btn-sm glyphicon glyphicon-trash' %></span>
@@ -39,10 +35,6 @@
       <td><%= barber_shop.city %></td>
       <td><%= barber_shop.phone %></td>
       <td><%= barber_shop.owner %></td>
-      <td><%= barber_shop.contact_name %></td>
-      <td><%= barber_shop.contact_phone1 %></td>
-      <td><%= barber_shop.contact_phone2 %></td>
-      <td><%= barber_shop.contact_email %></td>
       <td><%= case barber_shop.enable
       when true
         "SI"
