--- a/app/views/barber_shops/edit.html.erb
+++ b/app/views/barber_shops/edit.html.erb
@@ -1,6 +1,13 @@
-<h1><%= t 'barber_shops.edit.title' %></h1>
-
-<%= link_to t('app.show'), @barber_shop %> |
-<%= link_to t('app.back'), barber_shops_path %>
+<div class="page-header">
+  <%= link_to barber_shops_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    <%= t ('app.back') %>
+  <% end %>
+  <%= link_to @barber_shop, class: 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-info-sign"></span>
+    <%= t ('app.show') %>
+  <% end %>
+  <h1><%= t 'barber_shops.edit.title' %></h1>
+</div>
 
 <%= render 'form' %>
