--- a/app/views/barber_shops/new.html.erb
+++ b/app/views/barber_shops/new.html.erb
@@ -1,5 +1,9 @@
-<h1><%= t 'barber_shops.new.title' %></h1>
-
-<%= link_to t('app.back'), barber_shops_path %>
+<div class="page-header">
+  <%= link_to barber_shops_path, class: 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    <%= t('app.back')%>
+  <% end %>
+  <h1><%= t 'barber_shops.new.title' %></h1>
+</div>
 
 <%= render 'form' %>
