--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><%= link_to "Barbershops", barber_shops_path %></li>
+          <li><%= link_to "Services", services_path %></li>
         </ul>
       </div>
     </div>
