ajustes de css form barberias

--- a/app/views/barber_shops/_form.html.erb
+++ b/app/views/barber_shops/_form.html.erb
@@ -26,43 +26,43 @@
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.code' %><font color="#a94442">*</font></label>
             <div class="col-sm-8">
-              <%= f.text_field :code %>
+              <%= f.text_field :code , class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.name' %><font color="#a94442">*</font></label>
             <div class="col-sm-8">
-              <%= f.text_field :name %>
+              <%= f.text_field :name , class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.business_name' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :business_name %>
+              <%= f.text_field :business_name, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.nit' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :nit %>
+              <%= f.text_field :nit, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.address' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :address %>
+              <%= f.text_field :address, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.city' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :city %>
+              <%= f.text_field :city, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.phone' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :phone %>
+              <%= f.text_field :phone, class: "form-control" %>
             </div>
           </div>
         </div>
@@ -76,37 +76,37 @@
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.owner' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :owner %>
+              <%= f.text_field :owner, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.contact_name' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :contact_name %>
+              <%= f.text_field :contact_name, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.contact_phone1' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :contact_phone1 %>
+              <%= f.text_field :contact_phone1, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.contact_phone2' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :contact_phone2 %>
+              <%= f.text_field :contact_phone2, class: "form-control" %>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.contact_email' %></label>
             <div class="col-sm-8">
-              <%= f.text_field :contact_email %>
+              <%= f.text_field :contact_email , class: "form-control"%>
             </div>
           </div>
           <div class="form-group">
             <label class="col-sm-4 control-label"><%= t 'barber_shops.enable' %></label>
             <div class="col-sm-8">
-              <%= f.check_box :enable %>
+              <%= f.check_box :enable, class: "form-control" %>
             </div>
           </div>
         </div>
