--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,38 +1,37 @@
-<div class="page-header">
-  <%= link_to new_service_path, class: 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    New Service
-  <% end %>
-  <h1>Listing services</h1>
-</div>
-
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+
+    <h1><%= t 'services.index.title' %></h1>
+    <%= link_to new_service_path, class: "btn btn-primary btn-lg active pull-right", role: "button" do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    <%= t 'services.new.title' %>
+    <% end %>
+
+    <table id="services_lists" class="table-responsive table table-striped" cellspacing="0" width="100%">
     <thead>
       <tr>
-            <th>Name</th>
-            <th>Code</th>
-            <th>Price</th>
-            <th>Description</th>
-            <th>Enable</th>
-            <th>Barber shop</th>
-            <th></th>
-        <th></th>
-        <th></th>
+        <th><%= t 'app.actions' %></th>
+        <th>Name</th>
+        <th>Code</th>
+        <th>Price</th>
+        <th>Description</th>
+        <th>Enable</th>
+        <th>Barber shop</th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @services) do |service| %>
-            <td><%= service.name %></td>
-            <td><%= service.code %></td>
-            <td><%= service.price %></td>
-            <td><%= service.description %></td>
-            <td><%= service.enable %></td>
-            <td><%= service.barber_shop %></td>
-            <td><%= link_to 'Show', service %></td>
-        <td><%= link_to 'Edit', edit_service_path(service) %></td>
-        <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td style="width: 150px; display: block">
+        <%= link_to '', service, :class => 'btn btn-primary  btn-sm glyphicon glyphicon-eye-open' %></span>
+        <%= link_to '', edit_service_path(service), :class => 'btn btn-info  btn-sm glyphicon glyphicon-pencil' %></span>
+        <%= link_to ' ', service, method: :delete, data: { confirm: t('app.messages_confirmation_delete') }, :class => 'small btn  btn-danger btn-sm glyphicon glyphicon-trash' %></span>
+      </td>
+      <td><%= service.name %></td>
+      <td><%= service.code %></td>
+      <td><%= service.price %></td>
+      <td><%= service.description %></td>
+      <td><%= service.enable %></td>
+      <td><%= service.barber_shop %></td>
       <% end %>
     </tbody>
   </table>
