--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,32 +1,32 @@
 <div class="page-header">
   <%= link_to services_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    <%= t ('app.back') %>
   <% end %>
   <%= link_to edit_service_path(@service), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
-    Edit
+    <%= t ('app.edit') %>
   <% end %>
-  <h1>Show service</h1>
+  <h1><%= t 'services.show.title' %></h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Name:</dt>
+  <dt><%= t('services.name') %>:</dt>
   <dd><%= @service.name %></dd>
 
-  <dt>Code:</dt>
+  <dt><%= t('services.code') %>:</dt>
   <dd><%= @service.code %></dd>
 
-  <dt>Price:</dt>
+  <dt><%= t('services.price') %>:</dt>
   <dd><%= @service.price %></dd>
 
-  <dt>Description:</dt>
+  <dt><%= t('services.description') %>:</dt>
   <dd><%= @service.description %></dd>
 
-  <dt>Enable:</dt>
-  <dd><%= @service.enable %></dd>
-
-  <dt>Barber shop:</dt>
+  <dt><%= t('services.barber_shop') %>:</dt>
   <dd><%= @service.barber_shop %></dd>
+
+  <dt><%= t('services.enable') %>:</dt>
+  <dd><%= @service.enable %></dd>
 
 </dl>
