Modulo de Lineas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
         <ul class="nav navbar-nav">
           <li><%= link_to "Barbershops", barber_shops_path %></li>
           <li><%= link_to "Services", services_path %></li>
+          <li><%= link_to "Line", lines_path %></li>
         </ul>
       </div>
     </div>
