Modulo de Sublineas

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
           <li><%= link_to "Barbershops", barber_shops_path %></li>
           <li><%= link_to "Services", services_path %></li>
           <li><%= link_to "Line", lines_path %></li>
+          <li><%= link_to "Subline", sublines_path %></li>
         </ul>
       </div>
     </div>
