--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -10,12 +10,12 @@
     <thead>
       <tr>
         <th><%= t 'app.actions' %></th>
-        <th>Name</th>
-        <th>Code</th>
-        <th>Price</th>
-        <th>Description</th>
-        <th>Enable</th>
-        <th>Barber shop</th>
+        <th><%= t 'services.name' %></th>
+        <th><%= t 'services.code' %></th>
+        <th><%= t 'services.price' %></th>
+        <th><%= t 'services.description' %></th>
+        <th><%= t 'services.enable' %></th>
+        <th><%= t 'services.barber_shops' %></th>
       </tr>
     </thead>
 
