--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -13,32 +13,32 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name, class: "col-sm-2 control-label" %>
+    <label class="col-sm-2 control-label"><%= t 'lines.name' %><font color="#a94442">*</font></label>
     <div class="col-sm-10">
       <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :code, class: "col-sm-2 control-label" %>
+    <label class="col-sm-2 control-label"><%= t 'lines.code' %></label>
     <div class="col-sm-10">
       <%= f.text_field :code, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :description, class: "col-sm-2 control-label" %>
+    <label class="col-sm-2 control-label"><%= t 'lines.description' %></label>
     <div class="col-sm-10">
       <%= f.text_area :description, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :enable, class: "col-sm-2 control-label" %>
+    <label class="col-sm-2 control-label"><%= t 'lines.enable' %></label>
     <div class="col-sm-10">
       <%= f.check_box :enable, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: "btn btn-primary" %>
+      <%= f.submit t('app.save'), class: "btn btn-primary pull-right" %>
     </div>
   </div>
 <% end %>
