--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -1,26 +1,26 @@
 <div class="page-header">
   <%= link_to lines_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    <%= t ('app.back') %>
   <% end %>
   <%= link_to edit_line_path(@line), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
-    Edit
+    <%= t ('app.edit') %>
   <% end %>
-  <h1>Show line</h1>
+  <h1><%= t 'lines.show.title' %></h1>
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Name:</dt>
+  <dt><%= t 'services.name' %>:</dt>
   <dd><%= @line.name %></dd>
 
-  <dt>Code:</dt>
+  <dt><%= t 'services.code' %>:</dt>
   <dd><%= @line.code %></dd>
 
-  <dt>Description:</dt>
+  <dt><%= t 'services.description' %>:</dt>
   <dd><%= @line.description %></dd>
 
-  <dt>Enable:</dt>
+  <dt><%= t 'services.enable' %>:</dt>
   <dd><%= @line.enable %></dd>
 
 </dl>
