--- a/app/views/services/_form.html.erb
+++ b/app/views/services/_form.html.erb
@@ -14,6 +14,13 @@
 <% end %>
 
 <div class="form-group">
+    <label class="col-sm-2 control-label"><%= t 'services.barber_shops' %><font color="#a94442">*</font></label>
+    <div class="col-sm-10">
+    <%= f.collection_select :barber_shop_id, BarberShop.all, :id,:name, {prompt: 'Options', class: 'form-control'} %>
+  </div>
+</div>
+
+<div class="form-group">
   <label class="col-sm-2 control-label"><%= t 'services.name' %><font color="#a94442">*</font></label>
   <div class="col-sm-10">
     <%= f.text_field :name , class: "form-control" %>
@@ -38,13 +45,6 @@
   <label class="col-sm-2 control-label"><%= t 'services.description' %></label>
   <div class="col-sm-10">
     <%= f.text_area :description, class: "form-control" %>
-  </div>
-</div>
-
-<div class="form-group">
-  <label class="col-sm-2 control-label"><%= t 'services.barber_shops' %></label>
-  <div class="col-sm-10">
-    <%= f.text_field :barber_shop, class: "form-control" %>
   </div>
 </div>
 
