--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -11,6 +11,10 @@
 </div>
 
 <dl class="dl-horizontal">
+
+  <dt><%= t('services.barber_shop') %>:</dt>
+  <dd><%= @service.barber_shop.name %></dd>
+
   <dt><%= t('services.name') %>:</dt>
   <dd><%= @service.name %></dd>
 
@@ -22,9 +26,6 @@
 
   <dt><%= t('services.description') %>:</dt>
   <dd><%= @service.description %></dd>
-
-  <dt><%= t('services.barber_shop') %>:</dt>
-  <dd><%= @service.barber_shop %></dd>
 
   <dt><%= t('services.enable') %>:</dt>
   <dd><%= @service.enable %></dd>
