--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -1,16 +1,24 @@
-<%= form_for(@line, html: { class: "form-horizontal", role: "form" }) do |f| %>
+  <%= form_for @line, :html => { :class => 'form-horizontal' } do |f| %>
   <% if @line.errors.any? %>
-    <div class="alert alert-danger alert-dismissable" role="alert">
-      <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <h4><%= pluralize(@line.errors.count, "error") %> prohibited this line from being saved:</h4>
-
+  <div class="col-lg-10 col-lg-offset-2">
+    <div class="alert alert-danger">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong><%= t 'app.errors_messages' %></strong>
       <ul>
-      <% @line.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
+        <% @line.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
+  </div>
   <% end %>
+
+  <div class="form-group">
+      <label class="col-sm-2 control-label"><%= t 'lines.barber_shops' %><font color="#a94442">*</font></label>
+      <div class="col-sm-10">
+      <%= f.collection_select :barber_shop_id, BarberShop.all, :id,:name, {prompt: 'Options', class: 'form-control'} %>
+    </div>
+  </div>
 
   <div class="form-group">
     <label class="col-sm-2 control-label"><%= t 'lines.name' %><font color="#a94442">*</font></label>
@@ -18,24 +26,28 @@
       <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
+
   <div class="form-group">
     <label class="col-sm-2 control-label"><%= t 'lines.code' %></label>
     <div class="col-sm-10">
       <%= f.text_field :code, class: "form-control" %>
     </div>
   </div>
+
   <div class="form-group">
     <label class="col-sm-2 control-label"><%= t 'lines.description' %></label>
     <div class="col-sm-10">
       <%= f.text_area :description, class: "form-control" %>
     </div>
   </div>
+
   <div class="form-group">
     <label class="col-sm-2 control-label"><%= t 'lines.enable' %></label>
     <div class="col-sm-10">
       <%= f.check_box :enable, class: "form-control" %>
     </div>
   </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit t('app.save'), class: "btn btn-primary pull-right" %>
