--- a/app/views/lines/show.html.erb
+++ b/app/views/lines/show.html.erb
@@ -11,16 +11,20 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><%= t 'services.name' %>:</dt>
+
+  <dt><%= t('lines.barber_shop') %>:</dt>
+  <dd><%= @line.barber_shop.name %></dd>
+
+  <dt><%= t 'lines.name' %>:</dt>
   <dd><%= @line.name %></dd>
 
-  <dt><%= t 'services.code' %>:</dt>
+  <dt><%= t 'lines.code' %>:</dt>
   <dd><%= @line.code %></dd>
 
-  <dt><%= t 'services.description' %>:</dt>
+  <dt><%= t 'lines.description' %>:</dt>
   <dd><%= @line.description %></dd>
 
-  <dt><%= t 'services.enable' %>:</dt>
+  <dt><%= t 'lines.enable' %>:</dt>
   <dd><%= @line.enable %></dd>
 
 </dl>
